--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DashboardActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="245dp"
-        android:layout_height="49dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="75dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="@string/dashboard"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".DashboardActivity">
 
-    <TextView
-        android:id="@+id/cash_flow_display"
-        android:layout_width="231dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="208dp"
-        android:text="@string/income_expenses"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pie_chart" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="245dp"
+            android:layout_height="49dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="75dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/dashboard"
+            android:textSize="40sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/pie_chart"
-        android:layout_width="286dp"
-        android:layout_height="236dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/future_pie_chart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        <TextView
+            android:id="@+id/cash_flow_display"
+            android:layout_width="231dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginBottom="208dp"
+            android:text="@string/income_expenses"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pie_chart" />
 
-    <TextView
-        android:id="@+id/alert_goal_progress"
-        android:layout_width="285dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="45dp"
-        android:text="@string/goal_progress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cash_flow_display" />
+        <TextView
+            android:id="@+id/pie_chart"
+            android:layout_width="286dp"
+            android:layout_height="236dp"
+            android:layout_marginTop="60dp"
+            android:text="@string/future_pie_chart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/alert_goal_progress"
+            android:layout_width="285dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="45dp"
+            android:text="@string/goal_progress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cash_flow_display" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
