--- a/app/src/main/res/layout/activity_impact.xml
+++ b/app/src/main/res/layout/activity_impact.xml
@@ -81,6 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="38dp"
             android:layout_marginTop="30dp"
+            android:onClick="updateImpactClick"
             android:text="@string/update_impact"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/one_time_radio" />
@@ -91,6 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="38dp"
+            android:onClick="onClear"
             android:text="@string/clear_impact"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recurring_radio" />
