increased text size for alerts

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -26,6 +26,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="32dp"
             android:text="TextView"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pie_chart" />
@@ -36,6 +37,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bills_alert" />
@@ -46,6 +48,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/discretionary_alert" />
@@ -56,6 +59,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/debtreduction_alert" />
