--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginBottom="200dp"
         android:fontFamily="sans-serif"
+        android:onClick="loginVerify"
         android:text="@string/go_button_label"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,6 +55,7 @@
         android:layout_width="171dp"
         android:layout_height="58dp"
         android:layout_marginTop="24dp"
+        android:onClick="newUserPrompt"
         android:text="@string/new_user"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
