--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,7 +71,8 @@
         android:id="@+id/profile_update"
         android:layout_width="202dp"
         android:layout_height="48dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="100dp"
+        android:onClick="onUpdate"
         android:text="@string/update_profile"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
