--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="orange">#e88813</color>
+    <color name="yellow">#dde813</color>
+    <color name="blue">#131ae8</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#27e84e</color>
     <color name="red">#e6150e</color>
+    <!--Pie Chart Colors-->
+
 </resources>
