--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_margin">8dp</dimen>
+    !--pie chart-->
+    <dimen name="chart_title_text_size">18sp</dimen>
+    <dimen name="chart_width">300dp</dimen>
+    <dimen name="inside_title_text_size">20sp</dimen>
+    <dimen name="input_linear_padding">16dp</dimen>
+
 </resources>
